# 2048-bot

./: .gitignore  Cargo.toml  game.py  main.py  pyproject.toml
rust-impl/src/: main.rs
src/: main.rs
